--- a/src/template.html
+++ b/src/template.html
@@ -18,6 +18,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
+                <h6>Test</h6>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -28,6 +29,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
+                <h6>Test</h6>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -38,6 +40,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
+                <h6>Test</h6>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -48,6 +51,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
+                <h6>Test</h6>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -58,6 +62,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
+                <h6>Test</h6>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
