--- a/src/template.html
+++ b/src/template.html
@@ -14,11 +14,26 @@
         <h1 class="display-4 text-center">My Team</h1>
     </div>
 
-    <div class="card-deck mt-5 d-flex flex-row justify-content-between align-items-center">
-        <div class="card">
+    <div class="card-deck mt-5 ms-3 d-flex flex-row justify-content-around align-items-center ">
+        <div class="card bg-success text-white" style="width: 250px">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6>Test</h6>
+                <div class="card-header bg-success text-white">
+                    <h3 class="card-title">Card title</h5>
+                    <h4>Test</h6>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item text-bg-secondary">Cras justo odio</li>
+                    <li class="list-group-item text-bg-light">Dapibus ac facilisis in</li>
+                    <li class="list-group-item text-bg-secondary">Vestibulum at eros</li>
+                </ul>
+            </div>
+        </div>
+        <div class="card bg-success text-white">
+            <div class="card-body" style="width: 250px">
+                <div class="card-header bg-success text-white">
+                    <h3 class="card-title">Card title</h5>
+                    <h4>Test</h6>
+                </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -26,10 +41,12 @@
                 </ul>
             </div>
         </div>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6>Test</h6>
+        <div class="card bg-success text-white">
+            <div class="card-body" style="width: 250px">
+                <div class="card-header bg-success text-white">
+                    <h3 class="card-title">Card title</h5>
+                    <h4>Test</h6>
+                </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -37,10 +54,12 @@
                 </ul>
             </div>
         </div>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6>Test</h6>
+        <div class="card bg-success text-white">
+            <div class="card-body" style="width: 250px">
+                <div class="card-header bg-success text-white">
+                    <h3 class="card-title">Card title</h5>
+                    <h4>Test</h6>
+                </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -48,21 +67,12 @@
                 </ul>
             </div>
         </div>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6>Test</h6>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                </ul>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6>Test</h6>
+        <div class="card bg-success text-white">
+            <div class="card-body" style="width: 250px">
+                <div class="card-header bg-success text-white">
+                    <h3 class="card-title">Card title</h5>
+                    <h4>Test</h6>
+                </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
